fix #1558: url not wrapping on Chrome in mode `view`, font-size increasing   on mobile Webview

--- a/src/scss/jsoneditor/_editor.scss
+++ b/src/scss/jsoneditor/_editor.scss
@@ -12,6 +12,7 @@
 }
 div.jsoneditor-field,
 div.jsoneditor-value,
+a.jsoneditor-value,
 div.jsoneditor-readonly,
 div.jsoneditor-default {
   border: 1px solid transparent;
@@ -21,6 +22,8 @@ div.jsoneditor-default {
   padding: 2px;
   margin: 1px;
   word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
   float: left;
 }
 div.jsoneditor-field p,
@@ -29,7 +32,6 @@ div.jsoneditor-value p {
 }
 div {
   &.jsoneditor-value {
-    word-break: break-word;
     &.jsoneditor-empty {
       &::after {
         content: "value";
